# personal-api

./: .gitignore  Cargo.toml  flake.nix  package.json  rust-toolchain.toml  tsconfig.json
.github/workflows/: deploy.yaml
.kube/: deployment.yaml  kustomization.yaml  service.yaml  version.yaml
bindings/: DiscordCustomStatus.ts  DiscordEmoji.ts  DiscordOnlineStatus.ts  DiscordUserInfo.ts  LastFmArtist.ts  LastFmImageSet.ts  LastFmTrack.ts  LastFmUserInfo.ts  MinimalUser.ts  SteamGameInfo.ts  SteamUserInfo.ts  User.ts  index.ts
bruno/: aubrey.bru  icloud.bru
src/: caching.rs  config.rs  host_config.rs  host_rerouter.rs  main.rs
src/fetchers/: discord.rs  icloud.rs  last_fm.rs  mod.rs  steam.rs
src/middleware/: cors.rs  mod.rs
src/routes/: get_host_user.rs  get_user.rs  get_users.rs  mod.rs  root.rs
